# comp339

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.ccls-cache/@@home@nick@git@comp339/: @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@posix2_lim.h.blob  (+352 more)
.ccls-cache/@home@nick@git@comp339/: bloom@bloom.cc  bloom@bloom.cc.blob  bloom@include@lib.hh  bloom@include@lib.hh.blob  bloom@src@bloom.cc  bloom@src@bloom.cc.blob  bloom@src@lib.cc  bloom@src@lib.cc.blob  caeser-cipher@include@lib.hh  caeser-cipher@include@lib.hh.blob  caeser-cipher@src@caeser_test.cc  caeser-cipher@src@caeser_test.cc.blob  caeser-cipher@src@decoder.cc.blob  caeser-cipher@src@encoder.cc  caeser-cipher@src@encoder.cc.blob  caeser-cipher@src@lib.cc.blob  include@caeser_test.hh  include@caeser_test.hh.blob  include@lib.hh  include@lib.hh.blob  include@main.hh.blob  src@args.cc  src@args.cc.blob  src@build_cipher.cc  src@build_cipher.cc.blob  src@caeser_test.cc  src@caeser_test.cc.blob  src@decoder.cc  src@decoder.cc.blob  src@encoder.cc  src@encoder.cc.blob  src@lib.cc  src@lib.cc.blob  src@main.cc  src@main.cc.blob  src@parse_args.cc  src@parse_args.cc.blob  src@streams.cc.blob  src@utils.cc  src@utils.cc.blob
bloom/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  bloom-filter.html  optimal.txt  optimize.py  optimize.sh
bloom/data/: hamlet.txt
bloom/include/: bloom.hh  hash.hh  lib.hh
bloom/latex/: md_README.tex  refman.tex
bloom/src/: CMakeLists.txt  bloom  bloom.cc  bloom2.cc  bloom_filter  cloud.cc  hash.cc  optimize.py  temp.cc
caeser-cipher/data/: american-english  ciphertext.txt  decrypt.txt  out  pipe
caeser-cipher/scripts/: install-googletest.sh
caeser-cipher/src/: CMakeLists.txt  caeser_test.cc  caeser_test[1]_include.cmake  caeser_test[1]_tests.cmake  decoder.cc  encoder.cc  lib.cc  streams.cc
data/: ciphertext.txt  decrypt.txt  decrypt2.txt  encrypt.txt  out  plaintext.txt  test.txt
include/: lib.hh  main.hh
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  caeser_test.cc  caeser_test[1]_include.cmake  caeser_test[1]_tests.cmake  cmake_install.cmake  decoder.cc  encoder.cc  lib.cc  main-old.cpp  main.cc  parse_args.cc  ref.txt  test.cc
word-cloud/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
word-cloud/include/: bloom.hh  cloud.hh  hash.hh
word-cloud/src/: CMakeLists.txt  bloom.cc  cloud.cc
